[gd_scene load_steps=6 format=3 uid="uid://dc0howu75tr8v"]

[ext_resource type="Script" uid="uid://djmrdcjsguatv" path="res://scenes/crusher/crushed.gd" id="1_pneob"]
[ext_resource type="Texture2D" uid="uid://bpn1vlui4c5ls" path="res://assets/sprites/entitles/crusher.png" id="2_sq5ym"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ipyxr"]
size = Vector2(58, 882)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sq5ym"]
size = Vector2(4, 876.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugydg"]
size = Vector2(500, 63)

[node name="crushed" type="Node2D"]
script = ExtResource("1_pneob")
metadata/_edit_horizontal_guides_ = [629.0]

[node name="imageCrusher" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_sq5ym")

[node name="reached" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="reached"]
position = Vector2(280, 188)
shape = SubResource("RectangleShape2D_ipyxr")

[node name="crush" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="crush"]
position = Vector2(-18, 187)
shape = SubResource("RectangleShape2D_sq5ym")

[node name="wasteCrush" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="wasteCrush"]
position = Vector2(0, 180)
shape = SubResource("RectangleShape2D_ugydg")
debug_color = Color(0.928598, 0.212519, 0.416141, 0.42)

[connection signal="area_entered" from="reached" to="." method="_on_reached_area_entered"]
[connection signal="body_entered" from="reached" to="." method="_on_reached_body_entered"]
[connection signal="area_entered" from="crush" to="." method="_on_crush_area_entered"]
[connection signal="body_entered" from="crush" to="." method="_on_crush_body_entered"]
[connection signal="area_entered" from="wasteCrush" to="." method="_on_waste_crusher_area_entered"]
